[package]
name = "bevy_dolly"
version = "0.0.5"
authors = ["Black Phlox <bphlox@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/BlackPhlox/bevy_dolly"
documentation = "https://docs.rs/bevy_dolly"
description = "The dolly abstraction layer for the bevy game framework"
keywords = ["gamedev", "bevy", "camera", "fps", "3d"]
categories = ["game-development", "game-engines"]
exclude = ["assets/*", ".github/*"]

[profile.dev]
opt-level = 3

[lib]
name = "bevy_dolly"

[features]
default = ["drivers", "helpers"]
drivers = []
helpers = ["dep:leafwing-input-manager", "bevy/bevy_pbr"]

[dependencies]
dolly = { path = "dolly", default-features = false }
leafwing-input-manager = { version = "0.16", optional = true }

[dependencies.bevy]
version = "0.16.0-rc.3"
features = ["bevy_render", "bevy_asset", "bevy_window"]
default-features = false

[dev-dependencies]
leafwing-input-manager = "0.16"
bevy-inspector-egui = "0.30.0"

[dev-dependencies.bevy]
version = "0.16.0-rc.3"
features = [
    "bevy_core_pipeline",
    "animation",
    "bevy_asset",
    "bevy_scene",
    "bevy_pbr",
    "bevy_winit",
    "bevy_gltf",
    "bevy_sprite",
    "bevy_state",
    "png",
    "ktx2",
    "zstd",
    "tonemapping_luts",
    "bevy_gizmos",
]
default-features = false

[patch.crates-io]
leafwing-input-manager = {git = "https://github.com/Leafwing-Studios/leafwing-input-manager.git", rev="90e80af"}
bevy-inspector-egui = { git = "https://github.com/slyedoc/bevy-inspector-egui.git", rev="b24b8fb"}

[target.'cfg(target_os = "linux")'.dev-dependencies.bevy]
version = "0.15"
features = ["x11", "wayland"]
default-features = false

